Mon Sep 29 17:54:00 CEST 2014
locale/mozilla-firefox-l10n-24.8.1-i486-1_microlinux.txz: Upgraded.
locale/mozilla-thunderbird-l10n-24.8.1-i486-1_microlinux.txz: Upgraded.
l/liblqr-0.4.1-i486-1_microlinux.txz: Added.
l/lensfun-0.2.8-i486-3_microlinux.txz: Added.
l/opencv-2.4.9-i486-1_microlinux.txz: Added.
+--------------------------+
Thu Sep 25 06:17:55 CEST 2014
multimedia/openjpeg2-2.1.0-i486-1_microlinux.txz: Removed.
xap/mupdf-1.5-i486-4_microlinux.txz: Removed.
  We already have Okular and Evince, and Firefox doesn't need MuPDF to display
	PDF files. Thanks to fsLeg, gegechris99 and Didier Spaier on LQ for the
	heads-up. 
multimedia/dvdauthor-0.7.1-i486-1_microlinux.txz: Added.
multimedia/dvgrab-3.5-i486-1_microlinux.txz: Added.
multimedia/amrnb-11.0.0.0-i486-1_microlinux.txz: Added.
xap/openshot-1.4.3-i486-1_microlinux.txz: Added.
l/libgnomecups-0.2.3-i486-1_microlinux.txz: Added.
l/libgnomeprint-2.18.8-i486-1_microlinux.txz: Added.
l/libgnomeprintui-2.18.6-i486-1_microlinux.txz: Added.
+--------------------------+
Wed Sep 24 14:15:56 CEST 2014
ap/hplip-3.13.11-i486-1_microlinux.txz: Upgraded.
  This version supports the HP Laserjet Pro MFP-m127fn printer.
+--------------------------+
Tue Sep 23 08:55:41 CEST 2014
multimedia/openjpeg2-2.1.0-i486-1_microlinux.txz: Added.
xap/mupdf-1.5-i486-4_microlinux.txz: Added.
+--------------------------+
Sat Sep 20 08:00:39 CEST 2014
xap/conky-1.9.0-i486-2_microlinux.txz: Added.
l/libburn-1.3.6-i486-1_microlinux.txz: Added.
l/libisofs-1.3.6-i486-1_microlinux.txz: Added.
l/libisoburn-1.3.6-i486-1_microlinux.txz: Added.
l/gmtk-1.0.8-i486-1_microlinux.txz: Added.
l/totem-pl-parser-3.4.5-i486-2_microlinux.txz: Added.
l//libgnomecanvas-2.30.3-i486-1_microlinux.txz: Added.
+--------------------------+
Fri Sep 19 13:01:06 CEST 2014
ap/slackpkg+-1.3.2-noarch-2_microlinux.txz: Rebuilt.
  Preconfigured for all MLED repositories.
xap/transmission-2.60-i486-2_microlinux.txz: Added.