@@ -128,6 +128,8 @@ l/libgnomeprintui
 l/liblqr
 l/lensfun
 l/opencv
+xap/gnote
+xap/winff
 
 
 
