@@ -1,0 +1,136 @@
+#!/bin/sh
+
+# Slackware build script for WinFF
+
+# Written by Niki Kovacs <info@microlinux.fr>
+#
+# All rights reserved.
+#
+# Redistribution and use of this script, with or without modification, is
+# permitted provided that the following conditions are met:
+#
+# 1. Redistributions of this script must retain the above copyright
+#    notice, this list of conditions and the following disclaimer.
+#
+#  THIS SOFTWARE IS PROVIDED BY THE AUTHOR "AS IS" AND ANY EXPRESS OR IMPLIED
+#  WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
+#  MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO
+#  EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+#  SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+#  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
+#  OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+#  WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
+#  OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
+#  ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+PRGNAM=winff
+VERSION=${VERSION:-1.5.3}
+BUILD=${BUILD:-1}
+TAG=${TAG:-_microlinux}
+
+# Automatically determine the architecture we're building on:
+if [ -z "$ARCH" ]; then
+  case "$( uname -m )" in
+    i?86) ARCH=i486 ;;
+    arm*) ARCH=arm ;;
+       *) ARCH=$( uname -m ) ;;
+  esac
+fi
+
+CWD=$(pwd)
+TMP=${TMP:-/tmp/microlinux}
+PKG=$TMP/package-$PRGNAM
+OUTPUT=${OUTPUT:-/tmp}
+
+if [ "$ARCH" = "i486" ]; then
+  SLKCFLAGS="-O2 -march=i486 -mtune=i686"
+  LIBDIRSUFFIX=""
+elif [ "$ARCH" = "i686" ]; then
+  SLKCFLAGS="-O2 -march=i686 -mtune=i686"
+  LIBDIRSUFFIX=""
+elif [ "$ARCH" = "x86_64" ]; then
+  SLKCFLAGS="-O2 -fPIC"
+  LIBDIRSUFFIX="64"
+else
+  SLKCFLAGS="-O2"
+  LIBDIRSUFFIX=""
+fi
+
+set -e # Exit on most errors
+
+URL="sourceforge.net/projects/winpenpack/files/X-WinFF/program_sources"
+
+wget -c http://$URL/$PRGNAM-$VERSION-source.tar.gz
+
+rm -rf $PKG
+#mkdir -p $TMP/$PRGNAM $PKG $OUTPUT
+mkdir -p $TMP $PKG 
+cd $TMP
+rm -rf $TMP/$PRGNAM
+tar xvzf $CWD/$PRGNAM-$VERSION-source.tar.gz -C $TMP
+cd $PRGNAM
+chown -R root:root .
+find . \
+ \( -perm 777 -o -perm 775 -o -perm 711 -o -perm 555 -o -perm 511 \) \
+ -exec chmod 755 {} \; -o \
+ \( -perm 666 -o -perm 664 -o -perm 600 -o -perm 444 -o -perm 440 -o -perm 400 \) \
+ -exec chmod 644 {} \;
+
+# Build
+lazbuild --primary-config-path=/usr/share/lazarus -B winff.lpr
+
+# Executable program
+mkdir -p $PKG/usr/bin
+install -m 0755 winff $PKG/usr/bin
+
+# Languages
+mkdir -p $PKG/usr/share/winff/languages
+install -m 0644 languages/*.po $PKG/usr/share/winff/languages
+
+# Presets
+install -m 0644 presets.xml $PKG/usr/share/winff
+
+# Icons
+mkdir -p $PKG/usr/share/pixmaps
+install -m 0644 winff-icons/48x48/winff.png $PKG/usr/share/pixmaps
+
+for i in 16 24 32 48; do 
+  mkdir -p $PKG/usr/share/icons/hicolor/"$i"x"$i"/apps
+  install -m 0644 winff-icons/"$i"x"$i"/*.png $PKG/usr/share/icons/hicolor/"$i"x"$i"/apps
+done
+
+mkdir -p $PKG/usr/share/winff/winff-icons
+install -m 0644 winff-icons/*.{png,svgz} $PKG/usr/share/winff/winff-icons
+
+# Man page
+mkdir -p $PKG/usr/man/man1
+install -m 0644 winff.1 $PKG/usr/man/man1
+gzip -9 $PKG/usr/man/man1/winff.1
+
+# Help files
+mkdir -p $PKG/usr/share/winff/docs
+install -m 0644 docs/* $PKG/usr/share/winff/docs
+
+# Desktop menu entry
+mkdir -p $PKG/usr/share/applications
+cat $CWD/winff.desktop > $PKG/usr/share/applications/winff.desktop
+chown root:root $PKG/usr/share/applications/winff.desktop
+chmod 0644 $PKG/usr/share/applications/winff.desktop
+
+# Documentation
+mkdir -p $PKG/usr/doc/$PRGNAM-$VERSION
+cp -a AUTHORS COMPILE.TXT COPYING README* RESOURCES.RC  \
+  $PKG/usr/doc/$PRGNAM-$VERSION
+chmod 0644 $PKG/usr/doc/$PRGNAM-$VERSION/*
+cat $CWD/$PRGNAM.SlackBuild > $PKG/usr/doc/$PRGNAM-$VERSION/$PRGNAM.SlackBuild
+
+mkdir $PKG/install
+cat $CWD/slack-desc > $PKG/install/slack-desc
+cat $CWD/doinst.sh > $PKG/install/doinst.sh
+
+cd $PKG
+/sbin/makepkg -l y -c n $OUTPUT/$PRGNAM-$VERSION-$ARCH-$BUILD$TAG.${PKGTYPE:-txz}
+
+# Cleanup
+cd $TMP
+rm -rf $PRGNAM $PKG 
